Fixed firefox issue
Removed the annoying scrollbar on the bottom of the page in Firefox

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -112,6 +112,7 @@
     @include flex-direction(row);
     @include align-content(center);
     @include justify-content(center);
+    width: 100%;
     >.credits,
     > section {
       @include flex(0, 1, 670px);
